src/test/deca/codegen/invalid/debordement_mult.deca
{
    3.4028235e38f * 2;
}